--- a/views/components/a11y-buttons/a11y-buttons.css
+++ b/views/components/a11y-buttons/a11y-buttons.css
@@ -12,7 +12,6 @@
 }
 
 .button--ally {
-  background: var(--colour-dark);
-  font-size: .6em;
-  display: inline-block;
+  background: var(--colour-medium);
+  font-size: .65em;
 }
