--- a/views/components/a11y-buttons/a11y-buttons.njk
+++ b/views/components/a11y-buttons/a11y-buttons.njk
@@ -7,7 +7,7 @@
   <fieldset class="accessibility-tools__colour-theme">
     <legend>Control colour theme</legend>
     <button id="theme-default" class="button button--ally" type="button">Default</button>
-    <button id="theme-dark" class="button button--ally" type="button">Dark theme</button>
+    <button id="theme-contrast" class="button button--ally" type="button">Contrast <span class="visually-hidden">theme</span></button>
     <button id="theme-monochrome" class="button button--ally" type="button">Monochrome</button>
   </fieldset>
   <fieldset class="accessibility-tools__font-family">
