--- a/views/components/anchor-tags/anchor-tags.njk
+++ b/views/components/anchor-tags/anchor-tags.njk
@@ -1,4 +1,4 @@
-<p><a href="/">Link</a></p>
-<p><a href="/">External link</a></p>
+<p><a href="/" class="anchor">Link</a></p>
+<p><a href="/" class="anchor">External link</a></p>
 
 
