--- a/views/components/list/list.njk
+++ b/views/components/list/list.njk
@@ -1,30 +1,24 @@
 
+<p>Frontend development languages:</p>
+<ul class="unordered-list">
+  <li class="unordered-list__list-item">CSS</li>
+  <li class="unordered-list__list-item">HTML</li>
+  <li class="unordered-list__list-item">JavaScript</li>
+</ul>
 
- <ul aria-labelledby="movie-list" class="unordered-list">
-    <li class="unordered-list__list-item">Episode I: The Phantom Menace</li>
-    <li class="unordered-list__list-item">Episode II: Attack of the Clones</li>
-    <li class="unordered-list__list-item">Episode III: Revenge of the Sith</li>
-    <li class="unordered-list__list-item">Episode IV: A New Hope</li>
-    <li class="unordered-list__list-item">Episode V: The Empire Strikes Back</li>
-    <li class="unordered-list__list-item">Episode VI: Return of the Jedi</li>
-    <li class="unordered-list__list-item">Episode VII: The Force Awakens</li>
-  </ul>
+<p>Frontend development languages:</p>
+<dl class="description-list">
+  <dt class="description-list__title">CSS</dt>
+  <dd class="description-list__description">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</dd>
+  <dt class="description-list__title">HTML</dt>
+  <dd class="description-list__description">Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. </dd>
+  <dt class="description-list__title">JavaScript</dt>
+  <dd class="description-list__description">JavaScript enables interactive web pages and thus is an essential part of web applications.</dd>
+</dl>
 
-   <ol aria-labelledby="movie-list" class="ordered-list">
-    <li class="ordered-list__list-item">Episode I: The Phantom Menace</li>
-    <li class="ordered-list__list-item">Episode II: Attack of the Clones</li>
-    <li class="ordered-list__list-item">Episode III: Revenge of the Sith</li>
-    <li class="ordered-list__list-item">Episode IV: A New Hope</li>
-    <li class="ordered-list__list-item">Episode V: The Empire Strikes Back</li>
-    <li class="ordered-list__list-item">Episode VI: Return of the Jedi</li>
-    <li class="ordered-list__list-item">Episode VII: The Force Awakens</li>
-  </ol>
-
-  <dl class="description-list">
-    <dt class="description-list__title">first item</dt>
-    <dd class="description-list__description">definition for first item in list</dd>
-    <dt class="description-list__title">second item</dt>
-    <dd class="description-list__description">definition for second item in list</dd>
-    <dt class="description-list__title">third item</dt>
-    <dd class="description-list__description">definition for third item in list</dd>
-  </dl>
+<p>Highway code:</p>
+<ol class="ordered-list">
+  <li class="ordered-list__list-item">Stop</li>
+  <li class="ordered-list__list-item">Look</li>
+  <li class="ordered-list__list-item">Listen</li>
+ </ol>
