--- a/views/components/toggle/index.njk
+++ b/views/components/toggle/index.njk
@@ -1,4 +1,5 @@
 {% extends "../../templates/component.njk" %}
+{% set hasJS = true %}
 
 {% block meta %}
   <title>Pod - {{ componentName | replace("-", " ") | capitalize }}</title>
