--- a/views/components/toggle/toggle.njk
+++ b/views/components/toggle/toggle.njk
@@ -1,1 +1,1 @@
-<button id="js-toggle" class="toggle toggle-closed">Open menu</button>
+<button id="js-toggle" class="toggle toggle-closed">Open</button>
