--- a/assets/css/6-component-typography.css
+++ b/assets/css/6-component-typography.css
@@ -3,15 +3,22 @@
   ----------------------------------- */
 
   h1 {
-    font-size: 2.25em;
+    font-family: impact;
+    text-transform: uppercase;
+    font-size: 4em;
+    color: var(--colour-dark);
+    margin-bottom: .6em;
+    line-height: 1.2;
   }
   
   h2 {
     font-size: 1.625em;
+    margin-bottom: .4em;
   }
   
   h3 {
     font-size: 1.375em;
+    margin-bottom: .2em;
   }
   
   h4,
@@ -24,6 +31,12 @@
     font-size: 1em;
   }
 
+  .page-headings p {
+    font-size: 1.188em;
+    border-left: 4px solid var(--colour-light);
+    padding-left: .4em;
+  }
+
   input, 
   select, 
   textarea, 
@@ -31,7 +44,6 @@
     font-family:inherit;
     font-size: .8em;
   }
-
 
   .sub-text {
     font-size: .8em;
