--- a/views/about.njk
+++ b/views/about.njk
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block pageHeading %}
-  <h1 class="company-name">About Pod</h1>
+  <h1>About Pod</h1>
   <p>Description of page</p>
 {% endblock %}  
 
