--- a/views/components/anchor-tags/anchor-tags.css
+++ b/views/components/anchor-tags/anchor-tags.css
@@ -10,9 +10,8 @@
   
   a:hover,
   a:focus  {
-    background-color: var(--colour-light);
     transition: all .3s ease-in-out;
-    border-bottom: 5px solid var(--colour-bright);
+    background: var(--colour-light);
   }
 
   /* External window */
@@ -23,6 +22,11 @@
     height: 0;
     white-space: nowrap;
     content: '(opens new window)';
+  }
+
+  .anchor:hover,
+  .anchor:focus  {
+    border-bottom: 5px solid var(--colour-bright);
   }
   
 
