--- a/views/components/buttons/buttons.css
+++ b/views/components/buttons/buttons.css
@@ -3,7 +3,7 @@
   ----------------------------------- */
 
   button {
-    display: block;
+    display: inline-block;
     margin: .5em 0 0;
     padding: .5em 2em;
     border-radius: .2em;
@@ -12,7 +12,6 @@
     font-weight: bold;
     box-shadow: 0;
     transition: all 0.3s ease-in-out;
-    /* box-shadow: 0px 1px 0px 0px var(--colour-black); */
     background: var(--colour-dark);
   }
 
