--- a/views/components/list/list.css
+++ b/views/components/list/list.css
@@ -13,13 +13,27 @@
 
   .unordered-list__list-item {
     margin-bottom: .4em;
-    list-style-type: disc;
+    list-style: disc;
   }
 
+  /* Definition List */
+  dl {
+    margin-top: .4em;
+    margin-bottom: 1em;
+  }
+
+  dt {
+    font-weight: bold;
+  }
+  
+  dd {
+    margin: 0;
+    padding: 0 0 0.5em 0;
+  }
 
   /* Ordered lists */
   .ordered-list {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
     margin-top: .4em;
     margin-bottom: 1em;
@@ -30,13 +44,6 @@
     margin-bottom: .4em;
     list-style-type: decimal;
   }
-
-
- /* Definition List */
- dl {
-  margin-top: .4em;
-  margin-bottom: 1em;
- }
 
 
 
