--- a/views/components/logo/logo.css
+++ b/views/components/logo/logo.css
@@ -1,14 +1,16 @@
 /*
-  Toggle
+  Logo
   ----------------------------------- */
 
-.toggle { 
-  border: 0;
-  background: var(--colour-dark);
-  color: var(--colour-bright);
-  text-transform: uppercase;
-  border-radius: 0 5px 5px 0;
-  border: solid 4px var(--colour-bright);
-  border-left: 0;
-  transition: all 0.3s ease-in-out;
-}  
+  .logo {
+    width: 180px;
+    height: 180px;
+    margin: 2em auto;
+    color: var(--colour-bright);
+    border-radius: 50%;
+    border: solid 4px var(--colour-bright);
+    text-align: center;
+    animation: fadeIn 2s forwards;
+    background: var(--colour-dark);
+    text-align: center;
+  }
