--- a/views/components/navigation/navigation.css
+++ b/views/components/navigation/navigation.css
@@ -3,28 +3,28 @@
   ----------------------------------- */
 
 .navigation__list {
-  margin: .4em;
-  width: 100%;
-  max-width: 280px;
   margin: .4em 0 0;
-  padding: 0 2em 1.4em;
+  max-width: 280px;
+  padding: 1em;
   display: block;
+  background: var(--colour-medium);
+  border-top: solid 2px var(--colour-black);
+  border-bottom: solid 2px var(--colour-black);
 }
   
 .navigation__item {
   margin: .4em;
   display: block;
-  margin: 0; 
   background: var(--colour-dark);
 }
   
 .navigation__anchor {
   color: var(--colour-white);
   display: block;
-  margin-bottom: .6em;
-  padding: .4em 0 .4em .4em;
-  border:  solid 1px var(--colour-medium);
-  border-left: solid 4px var(--colour-bright);
+  margin: .6em 0 ;
+  padding: .4em 0 .4em .8em;
+  border-bottom: 0;
+  border-left: 4px solid var(--colour-bright);
   text-decoration: none;
   word-wrap: break-word;
 }
@@ -34,13 +34,14 @@
   background-color: var(--colour-light);
   color:  var(--colour-dark);
   text-decoration: underline;
-  border-bottom: 0;
+  border: 0;
+  border-left: solid 4px var(--colour-bright);
 }
 
 .navigation__anchor.active {
   background: var(--colour-light);
   color:  var(--colour-dark);
-  border-left: solid 4px var(--colour-bright);
+  border-left-color: var(--colour-bright);
 }
     
 .navigation__anchor.active .navigation__anchor__text {
@@ -64,17 +65,22 @@
   .navigation__item {
     display: inline-block;
     margin: 0 .2em;
+    background: none;
   }
 
   .navigation__anchor {
     border:  0;
+    padding: 0;
     border-bottom: solid 1px var(--colour-white);
   }
 
-  .navigation__anchor:hover {
+  .navigation__anchor:hover,
+  .navigation__anchor:focus {
     background: none;
     color: var(--colour-bright);
-    border-bottom: solid 1px var(--colour-white);
+    border-bottom: solid 4px var(--colour-bright);
+    border-left: 0;
+    text-decoration: none;
   }
 
 
