--- a/views/components/toggle/toggle.css
+++ b/views/components/toggle/toggle.css
@@ -11,4 +11,8 @@
   border: solid 4px var(--colour-bright);
   border-left: 0;
   transition: all 0.3s ease-in-out;
-}  
+} 
+
+.toggle:hover { 
+  border-radius: 0 10px 10px 0;
+}
