--- a/views/index.njk
+++ b/views/index.njk
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block pageHeading %}
-  <h1 class="company-name">Pod</h1>
+  <h1>Pod</h1>
   <p>Description of page</p>
 {% endblock %} 
 
