--- a/assets/css/6-component-tabs.css
+++ b/assets/css/6-component-tabs.css
@@ -2,10 +2,6 @@
   Tabs
   ----------------------------------- */
 
-  .tabs {
-    border: solid 1px var(--colour-dark);
-  }
-
   .tab-list {
     background: var(--colour-dark);
     padding: 0;
@@ -13,20 +9,14 @@
   }
   
   .tab-item {
-    display: block;
-  }
-  
-  .tab-item[data-tab-active] {
-    background: var(--colour-dark);
-    -webkit-transition: all 100ms cubic-bezier(0.42, 0, 1, 1);
-    transition: all 100ms cubic-bezier(0.42, 0, 1, 1);
-    text-decoration: none;
+    display: inline-block;
   }
   
   .tab-link {
     color: var(--colour-white);
     display: block;
     padding: 1em 1em;
+    margin-right: -5px;
     position: relative;
     text-decoration: none;
     -webkit-transition: all 100ms cubic-bezier(0.42, 0, 1, 1);
@@ -35,7 +25,22 @@
     border-right: solid 1px var(--colour-light);
     text-decoration: underline;
   }
-  
+
+  .tab-link:hover  {
+    background: var(--colour-bright);
+    color: var(--colour-dark);
+  }
+
+  .tab-link[data-tab-active] {
+    background: var(--colour-bright);
+    -webkit-transition: all 100ms cubic-bezier(0.42, 0, 1, 1);
+    transition: all 100ms cubic-bezier(0.42, 0, 1, 1);
+    text-decoration: none;
+    color: var(--colour-dark);
+    text-decoration: none;
+    cursor: not-allowed;
+  }
+
   .tab-link:focus {
       outline: 0;
       background-color: var(--colour-bright);
@@ -44,7 +49,6 @@
   }
   
   .tab-panel {
-    background: var(--colour-white);
     padding: 1em;
     background: var(--colour-light);
   }
@@ -62,24 +66,42 @@
     box-shadow: inset 0 0 0 2px var(--colour-medium);
   }
   
-  @media screen and (min-width: 800px) {
+  @media only screen and (max-width: 360px) {
+
+    .tab-list {
+      background: none;
+      color: var(--colour-dark);
+    }
+
     .tab-item {
-      display: inline-block;
+      display: block;
     }
+
+    .tab-link {
+      color: var(--colour-dark);
+      text-decoration: underline;
+      padding: .4em 0;
+    }
+
+    .tab-link:hover {
+      color: var(--colour-bright);
+      background: none;
+    }
+
+    .tab-link[data-tab-active] {
+      background: none;
+    }
+
+    .tab-link[data-tab-active]:hover {
+      color: var(--colour-dark);
+    }
+
+
+
+    
+
+    
   
-    .tab-item[data-tab-active] [role="tab"]:after {
-      content: '';
-      display: inline-block;
-      margin: auto;
-      position: absolute;
-      bottom: -9px;
-      left: 0;
-      right: 0;
-      width: 0;
-      height: 0;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-top: 10px solid var(--colour-bright);
-    }
+    
   }
   
