--- a/views/components/social-media-icons/social-media-icons.css
+++ b/views/components/social-media-icons/social-media-icons.css
@@ -2,3 +2,33 @@
   Social media icons
   ----------------------------------- */
 
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+
+  .social-media-icons__icon {
+    display: inline-block;
+  }
+  
+  .social-media-icons__anchor {
+    position: relative;
+    display: block;
+    width: 75px;
+    height: 75px;
+    margin: 0 5px;
+    border: 0;
+    color: var(--colour-dark);
+    fill: var(--colour-dark);
+  }
+
+  .social-media-icons__anchor:hover,
+  .social-media-icons__anchor:focus {
+    border-radius: 100%;
+    color: var(--colour-bright);
+    fill: var(--colour-bright);
+    background: var(--colour-dark);
+    outline: none;
+    transform: scale(1.25);
+    transition: background-color .5s, transform .5s ease-out;
+  }
