--- a/views/about.njk
+++ b/views/about.njk
@@ -8,15 +8,20 @@
 
 {% block pageHeading %}
   <h1>About Pod</h1>
-  <p>Description of page</p>
+  <p>---------</p>
 {% endblock %}  
 
+<section>
+  {% block content %}
+    <p>Acesibility tests</p>
+    <p>CSS tests</p>
+    <p>Coloiur check link</p>
+  {% endblock %}
+</section>
 
-{% block content %}
+Set up 
 
+1) npm install
+2) run gulp in terminal
 
-
-
-{% endblock %}
-
-
+Add other things like tasks in gulp etc to get set up
