--- a/views/index.njk
+++ b/views/index.njk
@@ -8,15 +8,14 @@
 
 {% block pageHeading %}
   <h1>Pod</h1>
-  <p>Description of page</p>
+  <p>A component library built with HTML, CSS, and JavaScript.</p>
 {% endblock %} 
 
 <section>
-{% block content %}
-
-
-
+  {% block content %}
+    <p>Why - EWhy not? Its important to have a place to try things out, experinent and learn about enhancements you prehaps cant use yet at work.</p>
+    <p>How link to about page. Vanilla (HA HA, spot the subtle reference in the name) Not because frameworks are bad but because thisway anyone can use it. </p>
+    <p>Coloiur check link</p>
+  {% endblock %}
 </section>
-{% endblock %}
-
 
