--- a/assets/css/6-component-tabs.css
+++ b/assets/css/6-component-tabs.css
@@ -66,7 +66,7 @@
     box-shadow: inset 0 0 0 2px var(--colour-medium);
   }
   
-  @media only screen and (max-width: 360px) {
+  /* @media only screen and (max-width: 360px) {
 
     .tab-list {
       background: none;
@@ -95,13 +95,6 @@
     .tab-link[data-tab-active]:hover {
       color: var(--colour-dark);
     }
-
-
-
-    
-
-    
-  
     
   }
-  
+   */
