--- a/views/components/logo/logo.css
+++ b/views/components/logo/logo.css
@@ -2,15 +2,28 @@
   Logo
   ----------------------------------- */
 
+  
   .logo {
     width: 180px;
     height: 180px;
     margin: 2em auto;
     color: var(--colour-bright);
-    border-radius: 50%;
-    border: solid 4px var(--colour-bright);
+    /* border-radius: 50%;
+    border: solid 4px var(--colour-bright); */
     text-align: center;
     animation: fadeIn 2s forwards;
     background: var(--colour-dark);
     text-align: center;
+    position:relative
+  }
+
+  .logo svg {
+    width: 100%;
+    height: auto;
+  }
+
+  .logo svg {
+    /* color: var(--colour-bright);
+    fill: var(--colour-bright); */
+    /* transform: rotate(3deg); */
   }
