--- a/views/components/navigation/index.njk
+++ b/views/components/navigation/index.njk
@@ -11,6 +11,7 @@
 {% block pageHeading %}
   <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
   <p>A ??? button is... </p>
+  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled </p>
 {% endblock %}
 
  
