--- a/views/includes/sidebar.njk
+++ b/views/includes/sidebar.njk
@@ -1,21 +1,23 @@
 
-<aside class="sidebar">
+<div class="sidebar">
  {% include "components/logo/logo.njk" %}
-  <ul class="navigation__list">
-    <li class="navigation__item">
-      <a href="/" title="Go to the home page" class="navigation__anchor {% if page_id == 'home' %}active  {% endif %}">
-        <span class="navigation__anchor__text">Home</span>
-      </a>
-    </li>
-    <li class="navigation__item">
-      <a href="/component-list" title="View the components page" class="navigation__anchor {% if page_id == 'component-list' %}active  {% endif %}">
-        <span class="navigation__anchor__text">Components</span>
-      </a>
-    </li>
-    <li class="navigation__item">
-      <a href="/about" title="View the bout Pod page" class="navigation__anchor {% if page_id == 'about' %}active  {% endif %}">
-        <span class="navigation__anchor__text">About Pod</span>
-      </a>
-    </li>
-  </ul>
-</aside>
+  <nav>
+    <ul class="navigation__list">
+      <li class="navigation__item">
+        <a href="/" title="Go to the home page" class="navigation__anchor {% if page_id == 'home' %}active  {% endif %}">
+          <span class="navigation__anchor__text">Home</span>
+        </a>
+      </li>
+      <li class="navigation__item">
+        <a href="/component-list" title="View the components page" class="navigation__anchor {% if page_id == 'component-list' %}active  {% endif %}">
+          <span class="navigation__anchor__text">Components</span>
+        </a>
+      </li>
+      <li class="navigation__item">
+        <a href="/about" title="View the bout Pod page" class="navigation__anchor {% if page_id == 'about' %}active  {% endif %}">
+          <span class="navigation__anchor__text">About Pod</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
