Add copy code button and cookie banner

--- a/assets/css/pod.css
+++ b/assets/css/pod.css
@@ -10,4 +10,5 @@
 @import '5-layout';
 @import '6-component-typography';
 @import '6-component-tabs';
+@import  '6-component-cookie-banner';
 @import '7-utilities';
