--- a/assets/css/5-layout.css
+++ b/assets/css/5-layout.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-wrap: wrap;
     min-height: 100vh;
+    max-width: 1280px;
   }
 
   /* Main Flex box 2 column layout */
