--- a/views/cookies.njk
+++ b/views/cookies.njk
@@ -2,26 +2,39 @@
 {% set page_id = "cookies" %} 
 
 {% block meta %}
-  <title>Cookies</title>
-  <meta name="description" content="Component styleguide built with PostCSS and JavaScript">
+  <title>Cookie policy</title>
+  <meta name="description" content="Component styleguide built with PostCSS and JavaScript - Cookir policy">
 {% endblock %}
 
 {% block pageHeading %}
   <h1>Cookie policy</h1>
-  <p>---------</p>
+  <p>A cookie is a small text file which is placed onto your computer or electronic device when you access our website. Similar technologies include web beacons, action tags, local shared objects ('flash cookies') and single-pixel gifs. Such technologies can be used to track users' actions and activities, and to store information about them.</p>
 {% endblock %}  
 
-<section>
+  <section>
   {% block content %}
-    <p>Acesibility tests</p>
-    <p>CSS tests</p>
-    <p>Coloiur check link</p>
+
+
+    <h3>Information collected</h3>
+
+    <p>We may obtain information about your computer or any other electronic device which you use to access our website, such as your IP address, your browser and/or other internet log information. We will treat this information as your personal information.</p>
+
+    <h3>Consent for cookies</h3>
+
+    <p>In most cases we will need your consent in order to use cookies on this website. The exception is where the cookie is essential in order for us to provide you with a service you have requested, or essential to the inherent functionality of the website (e.g to enable you to store items in a shopping basket and/or to use our check-out process).</p>
+    <p>Where we wish to use cookies that require your consent you will be asked whether you consent to the use of cookies in the following manner:</p>
+    <p>On the first visit a pop up window will ask for your to consent via clicking a confirmation button. This preference will then be saved for future visits.</p>
+    <p>Thereafter you will be provided with an opportunity to opt-out of the use of cookies which can be done in the following manner:</p>
+    <p>The pop up banner will display every 30 days giving users the option to opt out of cookies in future.</p>
+
+    <h3>Third-party cookies</h3>
+    <p>We work with third party suppliers who may also set cookies on our website. These cookies and their third party owners, are included in the table below. By consenting to the use of cookies on our site you will be consenting to the use of these cookies. These cookies may be used to collect the following information:</p>
+    <ul class="unordered-list">
+      <li>IP address</li>
+      <li>Browser details</li>
+      <li>User information</li>
+    </ul>
   {% endblock %}
 </section>
 
-Set up 
 
-1) npm install
-2) run gulp in terminal
-
-Add other things like tasks in gulp etc to get set up
