--- a/assets/css/4-elements.css
+++ b/assets/css/4-elements.css
@@ -43,6 +43,10 @@
     border: 1px solid var(--colour-meduim);
     background: var(--colour-light);
   }
+
+  pre {
+    margin-bottom: 1em;
+  }
  
   pre code {
     white-space: pre-wrap;       
@@ -52,10 +56,82 @@
     word-wrap: break-word; 
   }
 
+  a {
+    border-bottom: 1px solid currentColor;
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  a:hover,
+  a:focus  {
+    transition: all .3s ease-in-out;
+  }
+
+  /* External window */
+  a[target=_blank]::after {
+    display: inline-block;
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    white-space: nowrap;
+    content: '(opens new window)';
+  }
+
+  .anchor:hover,
+  .anchor:focus  {
+    border-bottom: 5px solid var(--colour-bright);
+  }
+
+
+
   /* Select */
   ::selection {
     background: var(--colour-bright);
   }
+
+
+  /* Lists */
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-left: 1em;
+  }
+
+  ul li {
+    list-style: disc;
+  }
+
+  dl {
+    margin-top: .4em;
+    margin-bottom: 1em;
+  }
+
+  dt {
+    font-weight: bold;
+  }
+  
+  dd {
+    margin: 0;
+    padding: 0 0 0.5em 0;
+  }
+
+  ol {
+    list-style: none;
+    padding: 0;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-left: 1em;
+  }
+
+  ol li {
+    list-style-type: decimal;
+  }
+
+
+
+
 
 
   
