--- a/views/components/list/list.css
+++ b/views/components/list/list.css
@@ -6,7 +6,7 @@
   .unordered-list {
     list-style-type: none;
     padding: 0;
-    margin-top: .4em;
+    margin-top: 1em;
     margin-bottom: 1em;
     padding-left: 1em;
   }
@@ -17,16 +17,16 @@
   }
 
   /* Definition List */
-  dl {
+  .description-list {
     margin-top: .4em;
     margin-bottom: 1em;
   }
 
-  dt {
+  .description-list__title {
     font-weight: bold;
   }
   
-  dd {
+  .description-list__description {
     margin: 0;
     padding: 0 0 0.5em 0;
   }
@@ -35,7 +35,7 @@
   .ordered-list {
     list-style: none;
     padding: 0;
-    margin-top: .4em;
+    margin-top: 1em;
     margin-bottom: 1em;
     padding-left: 1em;
   }
