Add words to icons

--- a/views/components/skip-navigation-link/skip-navigation-link.njk
+++ b/views/components/skip-navigation-link/skip-navigation-link.njk
@@ -1,5 +1,5 @@
-<p><a href="#main">skip to main content</a></p>
+<p><a href="#main-content">skip to main content</a></p>
 
 <main id="main-content">
-
+<h1>Main content</h1>
 </main>
