--- a/views/components/social-media-icons/social-media-icons.njk
+++ b/views/components/social-media-icons/social-media-icons.njk
@@ -3,6 +3,7 @@
   <li class="social-media-icons__icon">
     <a href="https://twitter.com/cathy_dutton" class="social-media-icons__anchor">
       <span class="visually-hidden">View my Twitter profile</span>
+      <span>Twitter</span>
       <svg version="1.1" width="100" height="100" role="img" viewBox="0 0 512 512" aria-labelledby="title" aria-describedby="desc">
         <title id="title">View my Twitter profile</title>
         <desc id="desc">link to Twitter profile</desc>
@@ -14,6 +15,7 @@
   <li class="social-media-icons__icon">
     <a href="https://github.com/cathydutton" class="social-media-icons__anchor">
       <span class="visually-hidden">View my Github profile</span>
+      <span>Github</span>
       <svg version="1.1" width="100" height="100" role="img" viewBox="0 0 512 512" aria-labelledby="title" aria-describedby="desc">
         <title id="title">View my Github profile</title>
         <desc id="desc">Link to Github profile</desc>
@@ -25,6 +27,7 @@
   <li class="social-media-icons__icon">
     <a href="https://codepen.io/cathydutton/" class="social-media-icons__anchor">
       <span class="visually-hidden">View my Codepen profile</span>
+      <span>Codepen</span>
       <svg version="1.1" width="100" height="100" role="img" viewBox="0 0 512 512" aria-labelledby="title" aria-describedby="desc">
         <title id="title">View my Codepen profile</title>
         <desc id="desc">Link to Codepen profile</desc>
@@ -36,6 +39,7 @@
  <li class="social-media-icons__icon">
     <a href="https://www.linkedin.com/in/cathy-dutton-32250328?trk=hp-identity-name" class="social-media-icons__anchor">
       <span class="visually-hidden">Connect with me on Linkedin</span>
+      <span>Linkedin</span>
       <svg version="1.1" width="100" height="100" role="img" viewBox="0 0 512 512" aria-labelledby="title" aria-describedby="desc">
         <title id="title">Connect with me on Linkedin</title>
         <desc id="desc">Link to Linkedin profile</desc>
@@ -45,3 +49,5 @@
   </li>
 
 </ul>
+
+
