--- a/assets/css/4-elements.css
+++ b/assets/css/4-elements.css
@@ -77,12 +77,10 @@
     content: '(opens new window)';
   }
 
-  .anchor:hover,
-  .anchor:focus  {
+  a:hover,
+  a:focus  {
     border-bottom: 5px solid var(--colour-bright);
   }
-
-
 
   /* Select */
   ::selection {
