--- a/assets/css/pod.css
+++ b/assets/css/pod.css
@@ -8,7 +8,7 @@
 @import '3-generic';
 @import '4-elements';
 @import '5-layout';
-@import '6-component-typography';
-@import '6-component-tabs';
-@import  '6-component-cookie-banner';
+@import '6-components/typography';
+@import '6-components/tabs';
+@import '6-components/cookie-banner';
 @import '7-utilities';
