--- a/assets/css/4-elements.css
+++ b/assets/css/4-elements.css
@@ -44,10 +44,23 @@
     background: var(--colour-light);
   }
 
-  pre {
+  pre { 
+    padding: .5em .5em 0em .5em;
+    line-height: 1.5;
     margin-bottom: 1em;
+    background:var(--colour-light);
+    background-image: linear-gradient( var(--colour-white) 50%, transparent 0);
+    background-size: auto 3em;
+    background-origin: content-box; 
+    font-family: Consolas, Monaco, monospace;
+    tab-size: 4;
+    white-space: unset;
   }
- 
+  
+  code { 
+    font: inherit 
+  }
+
   pre code {
     white-space: pre-wrap;       
     white-space: -moz-pre-wrap;  
@@ -56,89 +69,10 @@
     word-wrap: break-word; 
   }
 
-  a {
-    border-bottom: 1px solid currentColor;
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  a:hover,
-  a:focus  {
-    transition: all .3s ease-in-out;
-  }
-
-  /* External window */
-  a[target=_blank]::after {
-    display: inline-block;
-    overflow: hidden;
-    width: 0;
-    height: 0;
-    white-space: nowrap;
-    content: '(opens new window)';
-  }
-
-  a:hover,
-  a:focus  {
-    border-bottom: 5px solid var(--colour-bright);
-  }
-
   /* Select */
   ::selection {
     background: var(--colour-bright);
   }
 
 
-  /* Lists */
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding-left: 1em;
-  }
-
-  ul li {
-    list-style: disc;
-  }
-
-  dl {
-    margin-top: .4em;
-    margin-bottom: 1em;
-  }
-
-  dt {
-    font-weight: bold;
-  }
-  
-  dd {
-    margin: 0;
-    padding: 0 0 0.5em 0;
-  }
-
-  ol {
-    list-style: none;
-    padding: 0;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding-left: 1em;
-  }
-
-  ol li {
-    list-style-type: decimal;
-  }
-
-
-
-
-
-
-  
-  
-
-
-
-
-
-
-
-
+ 
