--- a/assets/css/6-components/typography.css
+++ b/assets/css/6-components/typography.css
@@ -7,35 +7,42 @@
     text-transform: uppercase;
     font-size: 4em;
     color: var(--colour-dark);
-    margin-bottom: .6em;
+    margin-bottom: .8em;
     line-height: 1.2;
+    hyphens: auto;
   }
   
   h2 {
     font-size: 1.625em;
-    margin-bottom: .4em;
+    margin-bottom: .6em;
+    hyphens: auto;
   }
   
   h3 {
     font-size: 1.375em;
-    margin-bottom: .2em;
+    margin-bottom: .4em;
+    hyphens: auto;
   }
   
   h4,
   h5,
   h6 {
     font-size: 1.188em;
+    margin-bottom: .4em;
+    hyphens: auto;
   }
 
   p {
     font-size: 1em;
     margin-bottom: .6em;
+    hyphens: auto;
   }
 
   .page-headings p {
     font-size: 1.188em;
     border-left: 4px solid var(--colour-bright);
     padding-left: .4em;
+    hyphens: auto;
   }
 
   input, 
