--- a/views/components/lists/index.njk
+++ b/views/components/lists/index.njk
@@ -1,4 +1,6 @@
 {% extends "../../templates/component.njk" %}
+{% set hasJS = false %}
+
 
 {% block meta %}
   <title>Pod - {{ componentName | replace("-", " ") | capitalize }}</title>
@@ -6,7 +8,12 @@
 {% endblock %}
 
 
+
 {% block pageHeading %}
   <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
-  <p>A anchor is... </p>
+  <p>A list is... </p>
 {% endblock %}
+
+
+ 
+
