--- a/views/components/navigation/navigation.css
+++ b/views/components/navigation/navigation.css
@@ -3,13 +3,14 @@
   ----------------------------------- */
 
 .navigation__list {
-  margin: .4em 0 0;
+  margin: 0;
   display: flex;
   flex-flow: row wrap;
   padding: 1em;
   background: var(--colour-medium);
   border-top: solid 2px var(--colour-black);
   border-bottom: solid 2px var(--colour-black);
+  min-width: 220px;
 }
   
 .navigation__item {
@@ -18,6 +19,7 @@
   background: var(--colour-dark);
   list-style: none;
   min-width: 180px;
+  hyphens: auto;
 }
   
 .navigation__anchor {
@@ -32,6 +34,7 @@
   
 .navigation__anchor:hover,
 .navigation__anchor:focus {
+  transition: all .3s ease-in-out;
   background-color: var(--colour-light);
   color:  var(--colour-dark);
   text-decoration: underline;
@@ -44,6 +47,10 @@
   color:  var(--colour-dark);
   border-left-color: var(--colour-bright);
 }
+
+.navigation__anchor.visited {
+
+}
     
 .navigation__anchor.active .navigation__anchor__text {
   border-bottom: solid 1px  var(--colour-dark);
@@ -53,42 +60,3 @@
   text-decoration: none;
   cursor: not-allowed;
 }
-
-/* Media queries */
-/* @media only screen and (max-width: 980px) {
-
-  .navigation__list {
-    text-align: center;
-    max-width: 100%;
-  }
-  
-  .navigation__item {
-    display: inline-block;
-    margin: 0 .2em;
-    background: none;
-  }
-
-  .navigation__anchor {
-    border:  0;
-    padding: 0;
-    border-bottom: solid 1px var(--colour-white);
-  }
-
-  .navigation__anchor:hover,
-  .navigation__anchor:focus {
-    background: none;
-    color: var(--colour-bright);
-    border-bottom: solid 4px var(--colour-bright);
-    border-left: 0;
-    text-decoration: none;
-  }
-
-
-  .navigation__anchor.active {
-    color: var(--colour-white);
-    background: none;
-    border:  0;
-    border-bottom: solid 4px var(--colour-bright);
-  }
-
-} */
